# hermes-xlr

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/: pr-ready.md
.github/workflows/: ci.yml
docs/: ab-protocol.md  integration-guide.md  s0.5-verdict.md  s2-bring-up.md  tuning-matrix.md
docs/ab-reports/: all-combined.json  baseline.json  cuda-graphs.json  kv-quant.json  s5-summary.md  spec-decode-ngram.json
docs/examples/: xlr_hermes_integration.py
hermes_nim_xlr/: __init__.py  cli.py  contracts.py  hermes_hook.py
hermes_nim_xlr/backends/: __init__.py  engine.py  llama_cpp.py
hermes_nim_xlr/harness/: __init__.py  benchmark.py  metrics.py
hermes_nim_xlr/mapper/: catalog.py  detect.py  planner.py
hermes_nim_xlr/transport/: __init__.py  _safe_tools.py  xlr_transport.py
models/: README.md  download.ps1
scripts/: download-cuda-engine.ps1  install-hermes.ps1  install-xlr.ps1  start-xlr-engine.ps1
src/hermes_nim_xlr/: cli.py  contracts.py
src/hermes_nim_xlr/backends/: __init__.py  release_gate.py
src/hermes_nim_xlr/harness/: __init__.py
src/hermes_nim_xlr/mapper/: __init__.py  _bandwidths.py  catalog.py  detect.py  formulas.py  planner.py
src/hermes_nim_xlr/transport/: __init__.py
tests/: conftest.py  test_backends.py  test_catalog.py  test_cli.py  test_contracts.py  test_detect.py  test_formulas.py  test_harness.py  test_planner.py  test_profile_matrix.py  test_sample.py  test_transport.py
tests/fixtures/: __init__.py
