[build-system]
requires = ["setuptools==80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-nim-xlr"
version = "0.1.0"
description = "Windows + NVIDIA optimization-first agent runtime accelerating the hermes-agent framework."
requires-python = ">=3.11"
# No runtime third-party dependencies yet. When one is added, it must be
# exact-pinned (no floating ranges) per AGENTS.md supply-chain policy.
dependencies = []

[project.optional-dependencies]
# Build-time / offline tooling only -- never installed in the serving path.
dev = ["ruff==0.15.10", "pytest==8.4.2"]
detect = ["nvidia-ml-py>=12.0.0,<13.0.0"]

[project.scripts]
xlr = "hermes_nim_xlr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
